--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -96,10 +96,12 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
             </a>
 
             <!--Search Icon-->
-            <a id="menu-search-icon"
-               class="inline-block ml-1 no-underline sm:ml-3 hover:text-black"
-               href="#"
-               @click.prevent="searchOpen = !searchOpen; $nextTick(function () { document.querySelector('#search').select(); });"
+            <button id="menu-search-icon"
+                    class="inline-block ml-1 no-underline sm:ml-3 hover:text-black"
+                    @click.prevent="
+                        searchOpen = !searchOpen;
+                        $nextTick(function () { document.querySelector('#search').select(); });
+                    "
             >
                 <span class="sr-only label">
                     <?= $escaper->escapeHtml(__('Search')) ?>
@@ -110,7 +112,7 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
                     25,
                     25
                 ) ?>
-            </a>
+            </button>
 
             <!--Customer Icon & Dropdown-->
             <?= $block->getChildHtml('customer') ?>
