--- a/Magento_Catalog/templates/product/view/sections/product-sections.phtml
+++ b/Magento_Catalog/templates/product/view/sections/product-sections.phtml
@@ -22,7 +22,7 @@ $defaultTitleTemplate = $titleRenderer->getTemplate();
 <?php
 foreach ($block->getGroupSortedChildNames('detailed_info', '') as $sectionName) {
     $sectionBlock = $block->getLayout()->getBlock($sectionName);
-    $sectionHtml  = $sectionBlock->toHtml();
+    $sectionHtml  = (string) $sectionBlock->toHtml();
     $titleTemplate = $sectionBlock->getData('title_template') ?? $defaultTitleTemplate;
 
     if (empty(trim($sectionHtml))) {
